upgraded query(homework 2 )